Showing otp two times in signup page is fixed.alignment issue of fill the patient details button in thirt party otions in tokens and appts is fixed.table responsive issue is fixed in service options list.

--- a/src/app/business/modules/check-ins/check-in/provider-checkin.component.css
+++ b/src/app/business/modules/check-ins/check-in/provider-checkin.component.css
@@ -831,6 +831,11 @@ h5
 .btn.btn-primary {
   color: #fff;
 }
+
+.btn-outline-primary
+{
+  border-color: #1E4079!important;
+}
 .font-weight-bold {
   font-weight: 500!important;
 }
